# shiny-flasher

./: .gitignore  README.md  main.js  package-lock.json  package.json
html/: index.html
html/js/: app.js
local_modules/ti-bootloader/: README.md  package-lock.json  package.json
local_modules/ti-bootloader/lib/: index.js
local_modules/ti-bootloader/native/: Cargo.toml
local_modules/ti-bootloader/native/src/: lib.rs
src/: index.js
src/components/: App.js  Button.js  icons.js
src/pages/: index.js
src/store/: combineReducer.js  constants.js  index.js  reducer.js
